--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
               email: "garciaejarquel@gmail.com"
             },
             client: {
-              name: "Productor / Empresa Agrícola",
-              contact: "A definir",
-              address: "Finca / Lote",
-              email: "cliente@productor.com"
+              name: "Solfrut",
+              contact: "Sector compras",
+              address: "",
+              email: ""
             },
             details: {
               title: "OPTIMIZACIÓN DE PODA ESTRUCTURAL – PISTACHO",
@@ -147,7 +147,6 @@
                     <h3 className="text-xs font-bold uppercase text-emerald-600 mb-2 tracking-wider">Preparado para:</h3>
                     <p className="text-xl font-bold text-gray-900">{proposalData.client.name}</p>
                     <p className="text-sm text-gray-700 font-medium mt-1">Atte: {proposalData.client.contact}</p>
-                    <p className="text-sm text-gray-500 mt-1">{proposalData.client.address} | {proposalData.client.email}</p>
                   </div>
 
                   <div className="mb-8 grid grid-cols-1 md:grid-cols-2 gap-8 text-sm">
